@@ -1,8 +1,12 @@
 package org.fao.geonet.api.sld;
 
+import io.swagger.annotations.Api;
+import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiParam;
 import org.fao.geonet.ApplicationContextHolder;
 import org.fao.geonet.api.API;
 import org.fao.geonet.api.exception.ResourceNotFoundException;
+import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.domain.TextFile;
 import org.fao.geonet.kernel.setting.SettingManager;
 import org.fao.geonet.repository.TextFileRepository;
@@ -17,42 +21,36 @@ import org.jdom.output.XMLOutputter;
 import org.json.JSONException;
 import org.json.JSONObject;
 import org.opengis.filter.Filter;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.ResponseBody;
-import org.springframework.web.bind.annotation.ResponseStatus;
-
-import java.io.IOException;
-import java.io.PrintWriter;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
+import org.springframework.web.bind.annotation.*;
 
 import javax.mail.internet.ParseException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.xml.transform.TransformerException;
-
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
 
 @Service
 @RequestMapping(value = {
-    "/api/tools/ogc",
-    "/api/" + API.VERSION_0_1 + "/tools/ogc"
+    "/{portal}/api/tools/ogc",
+    "/{portal}/api/" + API.VERSION_0_1 + "/tools/ogc"
 })
 @Api(value = "tools",
     tags = "tools",
     description = "Utility operations")
 public class SldApi {
+
+    public static final String LOGGER = Geonet.GEONETWORK + ".api.sld";
 
     @ApiOperation(value = "Test form", hidden = true)
     @RequestMapping(value = "/sldform",
@@ -128,6 +126,12 @@ public class SldApi {
     }
 
 
+    @Autowired
+    TextFileRepository fileRepository;
+
+    @Autowired
+    SettingManager settingManager;
+
     @ApiOperation(value = "Get the list of SLD available")
     @RequestMapping(value = "/sld",
         method = RequestMethod.GET,
@@ -135,10 +139,6 @@ public class SldApi {
     @ResponseBody
     @ResponseStatus(value = HttpStatus.OK)
     public List<String> getSLD(HttpServletRequest request) {
-        ConfigurableApplicationContext appContext = ApplicationContextHolder.get();
-        TextFileRepository fileRepository = appContext.getBean(TextFileRepository.class);
-        SettingManager settingManager = appContext.getBean(SettingManager.class);
-
         List<TextFile> files = fileRepository.findAll();
         List<String> response = new ArrayList<>(files.size());
         String pathPrefix = request.getContextPath() + request.getServletPath();
@@ -158,8 +158,6 @@ public class SldApi {
     @ResponseBody
     @ResponseStatus(value = HttpStatus.OK)
     public void deteleSLD() {
-        ConfigurableApplicationContext appContext = ApplicationContextHolder.get();
-        TextFileRepository fileRepository = appContext.getBean(TextFileRepository.class);
         fileRepository.deleteAll();
     }
 
@@ -184,16 +182,16 @@ public class SldApi {
         @ApiParam(value = "The filters in JSON",
             required = true)
         @RequestParam("filters") String filters,
-        HttpServletRequest request) throws ServiceException, TransformerException, JSONException, ParseException, IOException, JDOMException {
+        HttpServletRequest request) throws ServiceException, TransformerException, JSONException, ParseException, IOException, JDOMException, URISyntaxException {
 
         try {
-            ConfigurableApplicationContext appContext = ApplicationContextHolder.get();
-            TextFileRepository fileRepository = appContext.getBean(TextFileRepository.class);
-            SettingManager settingManager = appContext.getBean(SettingManager.class);
-
-            HashMap<String, String> hash = SLDUtil.parseSLD(new URL(serverURL), layers);
+            HashMap<String, String> hash = SLDUtil.parseSLD(new URI(serverURL), layers);
 
             Element root = Xml.loadString(hash.get("content"), false);
+
+            if(root.getName().equals("ServiceExceptionReport")) {
+                throw new ServiceException("The WMS GetStyle request failed.");
+            }
             Filter customFilter = SLDUtil.generateCustomFilter(new JSONObject(filters));
             SLDUtil.insertFilter(root, customFilter);
 
@@ -233,9 +231,6 @@ public class SldApi {
         @PathVariable("id") int id,
         HttpServletResponse response) throws ResourceNotFoundException {
         try {
-            ConfigurableApplicationContext appContext = ApplicationContextHolder.get();
-            TextFileRepository fileRepository = appContext.getBean(TextFileRepository.class);
-
             TextFile file = fileRepository.findOne(id);
             response.setContentType(file.getMimeType() + "; charset=utf-8");
             PrintWriter writer = response.getWriter();
